--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
   <!-- Add your site or application content here -->
   <header>
-    
+    <div class="container">
+      <img src="img/header/logo.png" alt="logo">
+      <h1>Leslips</h1>
+      <img src="img/header/auto.png" alt="auto">
+    </div>
   </header>
   <main>
     
