added navigation bar

--- a/index.html
+++ b/index.html
@@ -28,9 +28,30 @@
       <h1>Leslips</h1>
       <img src="img/header/auto.png" alt="auto">
     </div>
+    <div class="navigation-bar">
+      <nav>
+        <div class="navbar-nav">
+          <a href="#">Home</a>
+          <a href="#">School Projecten</a>
+          <a href="#">Vaardigheden</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
+        </div>
+      </nav>
+  
+      <div id="side-menu" class="side-nav">
+        <i class="fas fa-times fa-2x btn-close" onclick="closeSlideMenu()"></i>
+        <a href="#">Home</a>
+        <a href="#">School Projecten</a>
+        <a href="#">Vaardigheden</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
   </header>
-  <main>
-    
+  
+  <main id="main">
+    <p>tester de test</p>
   </main>
   <footer>
     
