--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 </head>
 <!-- https://freekies-gekkies-pc4u.github.io/leslips/ -->
 <body>
@@ -31,6 +32,7 @@
     </div>
     <div class="navigation-bar">
       <nav>
+        <i onclick="openSlideMenu()" class="fas fa-bars fa-2x"></i>
         <div class="navbar-nav">
           <a href="#">Home</a>
           <a href="#">School Projecten</a>
