--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
 <!-- https://freekies-gekkies-pc4u.github.io/leslips/ -->
+
 <body>
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -25,23 +27,26 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <div class="container">
+    <div class="header-container">
       <img src="img/header/logo.png" alt="logo">
       <h1>Leslips</h1>
       <img src="img/header/auto.png" alt="auto">
     </div>
     <div class="navigation-bar">
-      <nav>
-        <i onclick="openSlideMenu()" class="fas fa-bars fa-2x"></i>
-        <div class="navbar-nav">
-          <a href="#">Home</a>
-          <a href="#">School Projecten</a>
-          <a href="#">Vaardigheden</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Contact</a>
-        </div>
-      </nav>
-  
+      <div class="container">
+        <nav>
+          <i onclick="openSlideMenu()" class="fas fa-bars fa-2x"></i>
+
+          <div class="navbar-nav">
+            <a href="#">Home</a>
+            <a href="#">School Projecten</a>
+            <a href="#">Vaardigheden</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+          </div>
+
+        </nav>
+      </div>
       <div id="side-menu" class="side-nav">
         <i class="fas fa-times fa-2x btn-close" onclick="closeSlideMenu()"></i>
         <a href="#">Home</a>
@@ -52,19 +57,22 @@
       </div>
     </div>
   </header>
-  
+
   <main id="main">
-    <p>tester de test</p>
+    <div class="container">
+      <p>neuken in de keueken</p>
+    </div>
   </main>
   <footer>
-    
+
   </footer>
 
 
 
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
